--- a/Practica #2 – IF.html
+++ b/Practica #2 – IF.html
@@ -7,6 +7,7 @@
     <script src="1. Número positivo o negativo.js"></script>
     <script src="2. Mayor de edad.js"></script>
     <script src="3. Número par o impar.js"></script>
+    <script src="4. Calificación aprobatoria.js"></script>
 </head>
 <body>
     
