6. Mayor de dos números

--- a/Practica #2 – IF.html
+++ b/Practica #2 – IF.html
@@ -8,6 +8,8 @@
     <script src="2. Mayor de edad.js"></script>
     <script src="3. Número par o impar.js"></script>
     <script src="4. Calificación aprobatoria.js"></script>
+    <script src="5. Día de la semana.js"></script>
+    <script src="6. Mayor de dos números.js"></script>
 </head>
 <body>
     
