7. Hora del día

--- a/Practica #2 – IF.html
+++ b/Practica #2 – IF.html
@@ -10,6 +10,7 @@
     <script src="4. Calificación aprobatoria.js"></script>
     <script src="5. Día de la semana.js"></script>
     <script src="6. Mayor de dos números.js"></script>
+    <script src="7. Hora del día.js"></script>
 </head>
 <body>
     
