--- a/Practica #2 – IF.html
+++ b/Practica #2 – IF.html
@@ -11,6 +11,8 @@
     <script src="5. Día de la semana.js"></script>
     <script src="6. Mayor de dos números.js"></script>
     <script src="7. Hora del día.js"></script>
+    <script src="8. Número en un rango.js"></script>
+    <script src="9. Meses del año.js"></script>
 </head>
 <body>
     
