10. Multiplicación de dos números solo si es mayor a 100

--- a/Practica #2 – IF.html
+++ b/Practica #2 – IF.html
@@ -13,6 +13,7 @@
     <script src="7. Hora del día.js"></script>
     <script src="8. Número en un rango.js"></script>
     <script src="9. Meses del año.js"></script>
+    <script src="10. Multiplicación de dos números solo si es mayor a 100.js"></script>
 </head>
 <body>
     
